objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Lead Process</fullName>
        <description>Describes how Leads are created, nurtured, converted and handed over for the Opportunity management using Lead status field</description>
        <isActive>true</isActive>
        <values>
            <fullName>Converted</fullName>
        </values>
        <values>
            <fullName>Lost %28Reject%29</fullName>
        </values>
        <values>
            <fullName>MQL</fullName>
        </values>
        <values>
            <fullName>New %28Suspect%29</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Recycle</fullName>
        </values>
        <values>
            <fullName>SAL</fullName>
        </values>
        <values>
            <fullName>Sales Contacted</fullName>
        </values>
        <values>
            <fullName>Sales Qualified</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>DB_Created_Date_without_Time__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Created Date without Time</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DB_Lead_Age__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>NOW() - LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Lead Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EvergageAction_Click_Calculate_Your_R__c</fullName>
        <description>Uses of action &apos;Click Calculate Your Results&apos; in last business cycle</description>
        <label>Evergage Uses of Action &apos;Click Calculat&apos;</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EvergageAction_Click_Choose_Region_an__c</fullName>
        <description>Uses of action &apos;Click Choose Region and Crop&apos; in last business cycle</description>
        <label>Evergage Uses of Action &apos;Click Choose R&apos;</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EvergageAction_Click_Download_PDF__c</fullName>
        <description>Uses of action &apos;Click Download PDF&apos; in last business cycle</description>
        <label>Evergage Uses of Action &apos;Click Download&apos;</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EvergageAction_Click_Register_Now__c</fullName>
        <description>Uses of action &apos;Click Register Now&apos; in last business cycle</description>
        <label>Evergage Uses of Action &apos;Click Register&apos;</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EvergageAction_Click_Register_Today__c</fullName>
        <description>Uses of action &apos;Click Register Today&apos; in last business cycle</description>
        <label>Evergage Uses of Action &apos;Click Register&apos;</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EvergageAction_Homepage__c</fullName>
        <description>Uses of action &apos;Homepage&apos; in last business cycle</description>
        <label>Evergage Uses of Action &apos;Homepage&apos;</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EvergageAction_Paused_Video__c</fullName>
        <description>Uses of action &apos;Paused Video&apos; in last business cycle</description>
        <label>Evergage Uses of Action &apos;Paused Video&apos;</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EvergageAction_Played_Video__c</fullName>
        <description>Uses of action &apos;Played Video&apos; in last business cycle</description>
        <label>Evergage Uses of Action &apos;Played Video&apos;</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EvergageAction_Submit_Calculator_Requ__c</fullName>
        <description>Uses of action &apos;Submit Calculator Request Form&apos; in last business cycle</description>
        <label>Evergage Uses of Action &apos;Submit Calcula&apos;</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EvergageAction_Submit_Form__c</fullName>
        <description>Uses of action &apos;Submit Form&apos; in last business cycle</description>
        <label>Evergage Uses of Action &apos;Submit Form&apos;</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EvergageAction_Use_Dealer_Locator_For__c</fullName>
        <description>Uses of action &apos;Use Dealer Locator Form&apos; in last business cycle</description>
        <label>Evergage Uses of Action &apos;Use Dealer Loc&apos;</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EvergageAction_View_ACN_Insights_Page__c</fullName>
        <description>Uses of action &apos;View ACN Insights Page&apos; in last business cycle</description>
        <label>Evergage Uses of Action &apos;View ACN Insig&apos;</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EvergageAction_View_AG_College_Page__c</fullName>
        <description>Uses of action &apos;View AG College Page&apos; in last business cycle</description>
        <label>Evergage Uses of Action &apos;View AG Colleg&apos;</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EvergageAction_View_Article_Download__c</fullName>
        <description>Uses of action &apos;View Article Download Page&apos; in last business cycle</description>
        <label>Evergage Uses of Action &apos;View Article D&apos;</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EvergageAction_View_Article_Page__c</fullName>
        <description>Uses of action &apos;View Article Page&apos; in last business cycle</description>
        <label>Evergage Uses of Action &apos;View Article P&apos;</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EvergageAction_View_Aspire_ROI_Calcul__c</fullName>
        <description>Uses of action &apos;View Aspire ROI Calculator&apos; in last business cycle</description>
        <label>Evergage Uses of Action &apos;View Aspire RO&apos;</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EvergageAction_View_Dealer_Locator_Pa__c</fullName>
        <description>Uses of action &apos;View Dealer Locator Page&apos; in last business cycle</description>
        <label>Evergage Uses of Action &apos;View Dealer Lo&apos;</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EvergageAction_View_Microessentials_R__c</fullName>
        <description>Uses of action &apos;View Microessentials ROI Calculator&apos; in last business cycle</description>
        <label>Evergage Uses of Action &apos;View Microesse&apos;</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EvergageAction_View_Nutrient_Removal__c</fullName>
        <description>Uses of action &apos;View Nutrient Removal Calculator&apos; in last business cycle</description>
        <label>Evergage Uses of Action &apos;View Nutrient &apos;</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EvergageAction_View_Product_Page__c</fullName>
        <description>Uses of action &apos;View Product Page&apos; in last business cycle</description>
        <label>Evergage Uses of Action &apos;View Product P&apos;</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EvergageAction_View_Speak_With_a_Rep__c</fullName>
        <description>Uses of action &apos;View Speak With a Rep page&apos; in last business cycle</description>
        <label>Evergage Uses of Action &apos;View Speak Wit&apos;</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EvergageAction_View_TR_Trial_Data_Pag__c</fullName>
        <description>Uses of action &apos;View TR Trial Data Page&apos; in last business cycle</description>
        <label>Evergage Uses of Action &apos;View TR Trial &apos;</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EvergageAction_View_Video_Page__c</fullName>
        <description>Uses of action &apos;View Video Page&apos; in last business cycle</description>
        <label>Evergage Uses of Action &apos;View Video Pag&apos;</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EvergageEngagementTrend__c</fullName>
        <description>Engagement trend based on activity</description>
        <label>Evergage Eng. Trend</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EvergageEngagement__c</fullName>
        <description>Engagement score based on activity</description>
        <label>Evergage Engagement</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EvergageFilters__c</fullName>
        <description>Evergage matching filters</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Evergage Filters</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EvergageFirstActivity__c</fullName>
        <description>First activity with application</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Evergage First Visit</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EvergageKPI_acres__c</fullName>
        <description>Value of KPI &apos;Acres&apos;</description>
        <label>Evergage KPI &apos;Acres&apos;</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EvergageKPI_einsteinClickScore__c</fullName>
        <description>Value of KPI &apos;Einstein Click Score&apos;</description>
        <label>Evergage KPI &apos;Einstein Click Score&apos;</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EvergageKPI_einsteinOpenScore__c</fullName>
        <description>Value of KPI &apos;Einstein Open Score&apos;</description>
        <label>Evergage KPI &apos;Einstein Open Score&apos;</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EvergageLastActivity__c</fullName>
        <description>Last activity with application</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Evergage Last Visit</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EvergageLink__c</fullName>
        <description>Link to the Evergage page</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Evergage Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>PMC_DH_DealOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deal Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_DH_FarmSize__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Farm Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_Event_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Event Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PMC_MKT_Marketing_Product_Interest__c</fullName>
        <label>Marketing Product Interest</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aspire</fullName>
                </value>
                <value>
                    <fullName>Biopath</fullName>
                </value>
                <value>
                    <fullName>Microessentials</fullName>
                </value>
                <value>
                    <fullName>Powercoat</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_AcceptedByRetailer__c</fullName>
        <description>Specifies whether the Lead is Accepted by Retailer or not</description>
        <label>Accepted By Retailer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_AnticipatedNeedByDate__c</fullName>
        <description>Date in which Lead is looking to procure product(s)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Anticipated Need By Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_SS_CommunicationPreference__c</fullName>
        <description>What is this Lead&apos;s preferred method of communication?</description>
        <label>Communication Preference</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>WhatsApp</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_ConversionReason__c</fullName>
        <description>Reasons for converting Lead</description>
        <label>Conversion Reason</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Budget Sufficient</fullName>
                </value>
                <value>
                    <fullName>Decision Authority</fullName>
                </value>
                <value>
                    <fullName>Industry Fit</fullName>
                </value>
                <value>
                    <fullName>Timing Fit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_Crops__c</fullName>
        <description>Crops</description>
        <label>Crops</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PMC_SS_Crops</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_FiscalCodeCPF__c</fullName>
        <description>What is this Lead&apos;s CPF? CPF Is a personal document required for business in Brazil</description>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Fiscal Code / CPF</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_IsDuplicate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies whether this Lead is duplicate or not</description>
        <label>Is Duplicate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_SS_LatestProductInterests__c</fullName>
        <description>This field is used to capture latest product interest of Lead.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Latest Product Interests</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_LeadType__c</fullName>
        <description>Specifies the Lead Type</description>
        <label>Lead Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_OwnerFullName__c</fullName>
        <description>Owner full name</description>
        <formula>Owner:User.FirstName&amp;&quot; &quot;&amp;Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_ProductFamilyCategoryInterests__c</fullName>
        <description>States the Product Category</description>
        <label>Product Family Category Interests</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PMC_SS_ProductFamilies</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_ProductInterestVolumeEstimate__c</fullName>
        <description>Estimated volume of what a Lead is interested in</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Interest Volume Estimate</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PMC_SS_RegionalManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>States the Regional Manager</description>
        <label>Regional Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_SS_RejectionReason__c</fullName>
        <description>Reason Lead was Rejected</description>
        <label>Rejection Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Budget Insufficient</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Inaccurate Information</fullName>
                </value>
                <value>
                    <fullName>Outside of Geographic Coverage</fullName>
                </value>
                <value>
                    <fullName>Restricted Business</fullName>
                </value>
                <value>
                    <fullName>Spam</fullName>
                </value>
                <value>
                    <fullName>Unfit Customer Profile</fullName>
                </value>
                <value>
                    <fullName>Unresponsive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_RetailerEmailSentDate__c</fullName>
        <description>This field will be populated when Email will be sent to Retailer</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Retailer Email Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_SS_RetailerName__c</fullName>
        <description>Specifies the Retailer Name</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Retailer Name</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_SMSOptOut__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies the SMS Opt out preference of the Lead</description>
        <label>Marketing SMS Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_SS_WhatsappOptOut__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies the Whatsapp Opt out preference of the lead</description>
        <label>Marketing Whatsapp Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_Scheduled_DateTime__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Scheduled DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PMC_scheduled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scheduled with Mosaic Expert?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scheduled_Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Scheduled Time</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Scheduled_with_Mosaic_Expert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scheduled with Mosaic Expert?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__HasOptedOutOfMobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__Mobile_Country_Code__c</fullName>
        <label>Mobile Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                    <default>true</default>
                    <label>US</label>
                </value>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AF</fullName>
                </value>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>AI</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AO</fullName>
                </value>
                <value>
                    <fullName>AQ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>AW</fullName>
                </value>
                <value>
                    <fullName>AX</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BF</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>BH</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BJ</fullName>
                </value>
                <value>
                    <fullName>BL</fullName>
                </value>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>BN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>import_id__c</fullName>
        <description>Field that helps identify different import files</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Import ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lead_utm_campaign__c</fullName>
        <description>UTM Campaign field that Identifies the campaign.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>UTM Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lead_utm_content__c</fullName>
        <description>UTM Content field that Identifies the content zone, such as a call-to-action message.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>UTM Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lead_utm_medium__c</fullName>
        <description>UTM Medium field that Identifies the medium, such as a search engine, a social media platform, or another platform.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>UTM Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lead_utm_source__c</fullName>
        <description>UTM Source that Identifies the source of the traffic, such as Google, Websites, Banner Ads, or AdWords.  (This can be different than Lead Source)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>UTM Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lead_utm_term__c</fullName>
        <description>UTM Term field that Identifies keywords that generate clicks.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>UTM Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>PMC_SS_ChinaMarketingQualified_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>China New Leads</label>
        <queue>PMC_SS_ChinaNewLeads</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>PMC_SS_GTMBrazilLeads_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>GTM Brazil Leads</label>
        <queue>PMC_SS_GTMBrazilLeads</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>PMC_SS_GTMNALeads_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>GTM NA Leads</label>
        <queue>PMC_SS_GTMNALeads</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>PMC_SS_GlobalMarketingQualified_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Global New Leads</label>
        <queue>PMC_SS_GlobalNewLeads</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>PMC_SS_IndiaMarketingQualified_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>India New Leads</label>
        <queue>PMC_SS_IndiaNewLeads</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>PMC_SS_NAMarketingQualified_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>SA New Leads</label>
        <queue>PMC_SS_SANewLeads</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>PMC_SS_NAMarketingQualified_Lead1</fullName>
        <filterScope>Queue</filterScope>
        <label>NA New Leads</label>
        <queue>PMC_SS_NANewLeads</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>PMC_SS_NewLeads_Lead</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PMC_SS_OwnerFullName__c</field>
            <operation>equals</operation>
            <value>ben laster</value>
        </filters>
        <label>New Leads</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <recordTypes>
        <fullName>PMC_SS_Lead</fullName>
        <active>true</active>
        <businessProcess>Lead Process</businessProcess>
        <description>Default Lead Record Type</description>
        <label>Lead</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>PMC_SS_PopulateAddressonLead</fullName>
        <active>true</active>
        <description>Restricts the users to update the status as Sales Qualified and Converted if the Address if Blank</description>
        <errorConditionFormula>AND(
     NOT($Setup.PMC_ProcessSwitches__c.PMC_BypassValidationRule__c), 
     ISBLANK(Address),
     ISCHANGED(Status),
     OR(
	 ISPICKVAL(Status,&apos;Sales Qualified&apos;),
	 ISPICKVAL(Status,&apos;Converted&apos;)  
       )	
)</errorConditionFormula>
        <errorMessage>Please ensure that this lead has an Address prior to marking the Lead Status as Sales Qualified or Converted</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PMC_SS_PreventStatusChangetoConverted</fullName>
        <active>false</active>
        <description>This validation rule does not allow a user with Marketing user profile to change Lead status to converted.</description>
        <errorConditionFormula>AND(
 NOT($Setup.PMC_ProcessSwitches__c.PMC_BypassValidationRule__c) ,
 $Profile.Name = &apos;PMC Marketing User&apos; ,   
      ISCHANGED( Status ) , 
      ISPICKVAL( Status , &apos;Converted&apos;) 
)</errorConditionFormula>
        <errorMessage>Marketing Users are not able to convert Leads</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PMC_SS_ReqFieldsToChangeStatusSAL_Crops</fullName>
        <active>true</active>
        <description>Crops Field value should be entered in order to convert Lead Status to SAL</description>
        <errorConditionFormula>AND (
NOT($Setup.PMC_ProcessSwitches__c.PMC_BypassValidationRule__c),
(
IF(ISBLANK(PMC_SS_Crops__c), 0, 1) 

)&lt;1,
OR(ISCHANGED(Status),ISNEW()),
ISPICKVAL(Status,&apos;SAL&apos;)
)</errorConditionFormula>
        <errorDisplayField>PMC_SS_Crops__c</errorDisplayField>
        <errorMessage>Please fill out Crops field value.</errorMessage>
    </validationRules>
</CustomObject>